crates/balerix-core/tests/snapshots/plan_golden__fresh_up.snap
---
source: crates/balerix-core/tests/plan_golden.rs
expression: "go(Some(&f), Keep::default(), &FleetStatus::default(),\n&ObservedState::default())"
---
ensure-crew payments/backend
materialize payments/backend/alice
start payments/backend/alice 2c957fd3
materialize payments/backend/bob
start payments/backend/bob 89cf4262
