crates/balerix-core/tests/snapshots/plan_golden__stopped_agent_resumed.snap
---
source: crates/balerix-core/tests/plan_golden.rs
expression: "go(Some(&f), Keep::default(), &[], &st, &obs)"
---
ensure-crew payments/backend
materialize payments/backend/bob
start payments/backend/bob b94c9047
