crates/balerix-core/tests/snapshots/plan_golden__stopped_agent_running.snap
---
source: crates/balerix-core/tests/plan_golden.rs
expression: "go(Some(&f), Keep::default(), &[\"bob\"], &st, &running(&f))"
---
stop payments/backend/bob
ensure-crew payments/backend
